[package]
name = "create_testdata"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio_utils = {path = "../bio_utils"}
rand = "*"
rand_xoshiro = "*"
clap = "*"
poa_hmm = {path = "../partial_order_alignment"}
rand_distr = "*"